--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-	"name": "laravel/laravel",
-	"description": "The Laravel Framework.",
-	"keywords": ["framework", "laravel"],
-	"license": "MIT",
+	"name": "solarphase/solarphase",
+	"description": "SolarPhase development portfolio and blog.",
+	"keywords": ["solarphase", "solar", "phase", "portfolio", "blog"],
+	"license": "ISC",
 	"type": "project",
 	"require": {
 		"laravel/framework": "5.0.*"
