--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"license": "ISC",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.0.*"
+		"laravel/framework": "5.0.*",
+                "graham-campbell/markdown": "~3.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
