--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "bootstrap": "~3.3.2",
     "jquery": "~2.1.3",
     "fontface-source-sans-pro": "*",
-    "commonmark": "http://spec.commonmark.org/js/commonmark.js"
+    "commonmark": "http://spec.commonmark.org/js/commonmark.js",
+    "ace-builds": "~1.1.9"
   }
 }
