--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 	"require": {
 		"laravel/framework": "5.0.*",
                 "graham-campbell/markdown": "~3.0",
-                "laravelcollective/html": "~5.0"
+                "laravelcollective/html": "~5.0",
+		"intervention/image": "~2.1"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
